--- a/src/main/resources/templates/chess.html
+++ b/src/main/resources/templates/chess.html
@@ -6,9 +6,31 @@
   <meta charset="utf-8">
   <title>Chess Page of Testing Site </title>
   <script src="/js/jquery-3.3.1.min.js"></script>
-  <script src="/js/chess.js"></script>
+  <link rel="stylesheet" href="/style/style.css">
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
+
+<script src="/js/chess.js"></script>
 <body>
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/">Chess Maina</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarText">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <div id="place"></div>
+
+      </ul>
+    </div>
+  </div>
+</nav>
 <p>Html loads</p>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+<script src="/js/navbar.js"></script>
+
 </body>
 </html>
