--- a/src/main/resources/templates/errorRegistration.html
+++ b/src/main/resources/templates/errorRegistration.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Home Page of Testing Site</title>
-    <link rel="stylesheet" href="/style/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="/style/style.css">
 </head>
+
 
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -25,15 +24,7 @@
         </div>
     </div>
 </nav>
-<h1>Chess Site</h1>
 
-<a href="/chess/makeNewChess">
-    <h2>New Game</h2>
-</a>
-
-<a href="/chess/getChessById">
-    <h2>Get Chess Game by ID</h2>
-</a>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 <script src="/js/navbar.js"></script>
 
