--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,13 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Chess</title>
+  <title>Bootstrap demo</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="/style/style.css">
-
-
 </head>
-
 
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -26,7 +23,8 @@
     </div>
   </div>
 </nav>
-<form method="post" th:action="@{/register}" th:object="${user}" style="width: 40%;margin-left: 30%">
+
+<form method="post" th:action="@{/login}" th:object="${user}" style="width: 40%;margin-left: 30%">
 
   <div class="mb-3">
     <label for="exampleInputUsername" class="form-label">Username</label>
@@ -36,19 +34,11 @@
     <label for="exampleInputPassword1" class="form-label">Password</label>
     <input th:field="*{password}" type="password" class="form-control" id="exampleInputPassword1" required>
   </div>
-  <div class="mb-3">
-    <label for="exampleInputFirstName" class="form-label">First Name</label>
-    <input th:field="*{firstName}" type="text" class="form-control" id="exampleInputFirstName" required>
-  </div>
-  <div class="mb-3">
-    <label for="exampleInputLastName" class="form-label">First Name</label>
-    <input th:field="*{lastName}" type="text" class="form-control" id="exampleInputLastName" required>
-  </div>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+<script src="/js/navbar.js"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-<script src="/js/navbar.js"></script>
 
 </body>
 </html>
