--- a/src/main/resources/templates/chess.html
+++ b/src/main/resources/templates/chess.html
@@ -4,7 +4,7 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="utf-8">
-  <title>Chess Page of Testing Site </title>
+  <title>Chess maina </title>
   <script src="/js/jquery-3.3.1.min.js"></script>
   <link rel="stylesheet" href="/style/style.css">
 
@@ -21,8 +21,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarText">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <div id="place"></div>
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="place">
 
       </ul>
     </div>
