--- a/src/main/resources/templates/Game.html
+++ b/src/main/resources/templates/Game.html
@@ -4,7 +4,7 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="utf-8">
-  <title>Game Page</title>
+  <title>Chess maina</title>
 
   <link rel="stylesheet" type="text/css" href="/style/Game.css">
 
@@ -23,8 +23,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarText">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <div id="place"></div>
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="place">
 
       </ul>
     </div>
