--- a/src/main/resources/templates/MakeGame.html
+++ b/src/main/resources/templates/MakeGame.html
@@ -4,7 +4,7 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="utf-8">
-  <title>Game Page</title>
+  <title>Chess maina</title>
   <link rel="stylesheet" href="/style/style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
@@ -18,8 +18,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarText">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <div id="place"></div>
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="place">
 
       </ul>
     </div>
