--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -10,7 +10,23 @@
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" rel="stylesheet">
 
 </head>
+<style>
+    table {
+        font-family: arial, sans-serif;
+        border-collapse: collapse;
+        width: 100%;
+    }
 
+    td, th {
+        border: 1px solid #3e5d9b;
+        text-align: left;
+        padding: 8px;
+    }
+
+    tr:nth-child(even) {
+        background-color: #170644;
+    }
+</style>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
@@ -37,6 +53,26 @@
         <a class="btn btn-dark" href="/chess/getChessById" role="button"><h4 class="display-6">Get Game by ID</h4>
         </a>
     </div>
+</div>
+<div style="overflow: auto;height: 300px;
+position: absolute;width: 100%;margin-top: 10%;">
+<table style="background-color: #212529;
+position:absolute;width: 100%;" >
+    <tr>
+        <th style="text-align: center" colspan="4">Events</th>
+    </tr>
+    <tr>
+        <th>Name</th>
+        <th>date-time</th>
+        <th>Place</th>
+    </tr>
+    <tr th:each="event: ${events}" >
+
+        <td th:text="${event.name}"></td>
+        <td th:text="${event.dateTime}"></td>
+        <td th:text="${event.place}"></td>
+    </tr>
+</table>
 </div>
 <script crossorigin="anonymous"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
