--- a/src/main/resources/templates/events.html
+++ b/src/main/resources/templates/events.html
@@ -6,6 +6,9 @@
     <title>Chess maina</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="/style/style.css">
+
+
+
 </head>
 
 <body>
@@ -26,6 +29,19 @@
 <div class="center-items">
     <h1 class="display-2">Events</h1>
 </div>
+
+    <form method="post" class="center-items" style="width: 40%;left:30%;position: absolute" th:action="@{/createEvent}" th:object="${event}">
+
+        <label for="name">Name of the event:</label>
+        <input class="form-control" th:field="*{name}" type="text" id="name" name="name" required>
+
+        <label for="placeEvent">Place of the event:</label>
+        <input class="form-control" th:field="*{place}" type="text" id="placeEvent" name="placeEvent" required>
+
+        <label for="datetime">Event date and time:</label>
+        <input class="form-control" th:field="*{dateTime}" type="datetime-local" id="datetime" name="datetime" required>
+        <button class="btn btn-primary" type="submit"> Submit</button>
+    </form>
 <script src="/js/navbar.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
